Updatd homepage with new images and text

--- a/index.html
+++ b/index.html
@@ -170,47 +170,47 @@
                     type="image/webp"
                     media="(max-width: 480px)"
                     srcset="
-                      img/products/home-page/bardolino/bardolino-homepage-mobile@1x.webp 1x,
-                      img/products/home-page/bardolino/bardolino-homepage-mobile@2x.webp 2x,
-                      img/products/home-page/bardolino/bardolino-homepage-mobile@3x.webp 3x
+                      img/products/home-page/crazy-cat/crazy-cat-homepage-mobile@1x.webp 1x,
+                      img/products/home-page/crazy-cat/crazy-cat-homepage-mobile@2x.webp 2x,
+                      img/products/home-page/crazy-cat/crazy-cat-homepage-mobile@3x.webp 3x
                     "
                   />
                   <source
                     type="image/png"
                     media="(max-width: 480px)"
                     srcset="
-                      img/products/home-page/bardolino/bardolino-homepage-mobile@1x.png 1x,
-                      img/products/home-page/bardolino/bardolino-homepage-mobile@2x.png 2x,
-                      img/products/home-page/bardolino/bardolino-homepage-mobile@3x.png 3x
+                      img/products/home-page/crazy-cat/crazy-cat-homepage-mobile@1x.png 1x,
+                      img/products/home-page/crazy-cat/crazy-cat-homepage-mobile@2x.png 2x,
+                      img/products/home-page/crazy-cat/crazy-cat-homepage-mobile@3x.png 3x
                     "
                   />
                   <source
                     type="image/webp"
                     srcset="
-                      img/products/home-page/bardolino/bardolino-homepage@1x.webp 1x,
-                      img/products/home-page/bardolino/bardolino-homepage@2x.webp 2x,
-                      img/products/home-page/bardolino/bardolino-homepage@3x.webp 3x
+                      img/products/home-page/crazy-cat/crazy-cat-homepage@1x.webp 1x,
+                      img/products/home-page/crazy-cat/crazy-cat-homepage@2x.webp 2x,
+                      img/products/home-page/crazy-cat/crazy-cat-homepage@3x.webp 3x
                     "
                   />
                   <source
                     type="image/png"
                     srcset="
-                      img/products/home-page/bardolino/bardolino-homepage@1x.png 1x,
-                      img/products/home-page/bardolino/bardolino-homepage@2x.png 2x,
-                      img/products/home-page/bardolino/bardolino-homepage@3x.png 3x
+                      img/products/home-page/crazy-cat/crazy-cat-homepage@1x.png 1x,
+                      img/products/home-page/crazy-cat/crazy-cat-homepage@2x.png 2x,
+                      img/products/home-page/crazy-cat/crazy-cat-homepage@3x.png 3x
                     "
                   />
                   <img
-                    src="img/products/home-page/bardolino/bardolino-homepage@1x.png"
+                    src="img/products/home-page/crazy-cat/crazy-cat-homepage@1x.png"
                     alt="Vinflaskan Bardolino"
                     loading="lazy"
                   />
                 </picture>
               </div>
-              <p class="country">Italien</p>
-              <h3 class="title">La Corde del Pozzo</h3>
-              <p class="description">Bardolino</p>
-              <p class="price">3000:-</p>
+              <p class="country">Australien</p>
+              <h3 class="title">Crazy Cat</h3>
+              <p class="description">Chardonnay</p>
+              <p class="price">1500:-</p>
             </a>
           </article>
           <article>
@@ -221,47 +221,47 @@
                     type="image/webp"
                     media="(max-width: 480px)"
                     srcset="
-                      img/products/home-page/bardolino/bardolino-homepage-mobile@1x.webp 1x,
-                      img/products/home-page/bardolino/bardolino-homepage-mobile@2x.webp 2x,
-                      img/products/home-page/bardolino/bardolino-homepage-mobile@3x.webp 3x
+                      img/products/home-page/alba-rhino/alba-rhino-homepage-mobile@1x.webp 1x,
+                      img/products/home-page/alba-rhino/alba-rhino-homepage-mobile@2x.webp 2x,
+                      img/products/home-page/alba-rhino/alba-rhino-homepage-mobile@3x.webp 3x
                     "
                   />
                   <source
                     type="image/png"
                     media="(max-width: 480px)"
                     srcset="
-                      img/products/home-page/bardolino/bardolino-homepage-mobile@1x.png 1x,
-                      img/products/home-page/bardolino/bardolino-homepage-mobile@2x.png 2x,
-                      img/products/home-page/bardolino/bardolino-homepage-mobile@3x.png 3x
+                      img/products/home-page/alba-rhino/alba-rhino-homepage-mobile@1x.png 1x,
+                      img/products/home-page/alba-rhino/alba-rhino-homepage-mobile@2x.png 2x,
+                      img/products/home-page/alba-rhino/alba-rhino-homepage-mobile@3x.png 3x
                     "
                   />
                   <source
                     type="image/webp"
                     srcset="
-                      img/products/home-page/bardolino/bardolino-homepage@1x.webp 1x,
-                      img/products/home-page/bardolino/bardolino-homepage@2x.webp 2x,
-                      img/products/home-page/bardolino/bardolino-homepage@3x.webp 3x
+                      img/products/home-page/alba-rhino/alba-rhino-homepage@1x.webp 1x,
+                      img/products/home-page/alba-rhino/alba-rhino-homepage@2x.webp 2x,
+                      img/products/home-page/alba-rhino/alba-rhino-homepage@3x.webp 3x
                     "
                   />
                   <source
                     type="image/png"
                     srcset="
-                      img/products/home-page/bardolino/bardolino-homepage@1x.png 1x,
-                      img/products/home-page/bardolino/bardolino-homepage@2x.png 2x,
-                      img/products/home-page/bardolino/bardolino-homepage@3x.png 3x
+                      img/products/home-page/alba-rhino/alba-rhino-homepage@1x.png 1x,
+                      img/products/home-page/alba-rhino/alba-rhino-homepage@2x.png 2x,
+                      img/products/home-page/alba-rhino/alba-rhino-homepage@3x.png 3x
                     "
                   />
                   <img
-                    src="img/products/home-page/bardolino/bardolino-homepage@1x.png"
+                    src="img/products/home-page/alba-rhino/alba-rhino-homepage@1x.png"
                     alt="Vinflaskan Bardolino"
                     loading="lazy"
                   />
                 </picture>
               </div>
-              <p class="country">Italien</p>
-              <h3 class="title">La Corde del Pozzo</h3>
-              <p class="description">Bardolino</p>
-              <p class="price">3000:-</p>
+              <p class="country">Portugal</p>
+              <h3 class="title">Alba Rhino</h3>
+              <p class="description">Vinho Verde</p>
+              <p class="price">4700:-</p>
             </a>
           </article>
         </div>
@@ -346,63 +346,63 @@
                     type="image/avif"
                     media="(max-width: 480px)"
                     srcset="
-                      img/news/new-assortment/new-assortment-mobile@1x.avif 1x,
-                      img/news/new-assortment/new-assortment-mobile@2x.avif 2x,
-                      img/news/new-assortment/new-assortment-mobile@3x.avif 3x
+                      img/news/malbec/malbec-mobile@1x.avif 1x,
+                      img/news/malbec/malbec-mobile@2x.avif 2x,
+                      img/news/malbec/malbec-mobile@3x.avif 3x
                     "
                   />
                   <source
                     type="image/webp"
                     media="(max-width: 480px)"
                     srcset="
-                      img/news/new-assortment/new-assortment-mobile@1x.webp 1x,
-                      img/news/new-assortment/new-assortment-mobile@2x.webp 2x,
-                      img/news/new-assortment/new-assortment-mobile@3x.webp 3x
+                      img/news/malbec/malbec-mobile@1x.webp 1x,
+                      img/news/malbec/malbec-mobile@2x.webp 2x,
+                      img/news/malbec/malbec-mobile@3x.webp 3x
                     "
                   />
                   <source
                     type="image/jpg"
                     media="(max-width: 480px)"
                     srcset="
-                      img/news/new-assortment/new-assortment-mobile@1x.jpg 1x,
-                      img/news/new-assortment/new-assortment-mobile@2x.jpg 2x,
-                      img/news/new-assortment/new-assortment-mobile@3x.jpg 3x
+                      img/news/malbec/malbec-mobile@1x.jpg 1x,
+                      img/news/malbec/malbec-mobile@2x.jpg 2x,
+                      img/news/malbec/malbec-mobile@3x.jpg 3x
                     "
                   />
                   <source
                     type="image/avif"
                     srcset="
-                      img/news/new-assortment/new-assortment@1x.avif 1x,
-                      img/news/new-assortment/new-assortment@2x.avif 2x,
-                      img/news/new-assortment/new-assortment@3x.avif 3x
+                      img/news/malbec/malbec@1x.avif 1x,
+                      img/news/malbec/malbec@2x.avif 2x,
+                      img/news/malbec/malbec@3x.avif 3x
                     "
                   />
                   <source
                     type="image/webp"
                     srcset="
-                      img/news/new-assortment/new-assortment@1x.webp 1x,
-                      img/news/new-assortment/new-assortment@2x.webp 2x,
-                      img/news/new-assortment/new-assortment@3x.webp 3x
+                      img/news/malbec/malbec@1x.webp 1x,
+                      img/news/malbec/malbec@2x.webp 2x,
+                      img/news/malbec/malbec@3x.webp 3x
                     "
                   />
                   <source
                     type="image/jpg"
                     srcset="
-                      img/news/new-assortment/new-assortment@1x.jpg 1x,
-                      img/news/new-assortment/new-assortment@2x.jpg 2x,
-                      img/news/new-assortment/new-assortment@3x.jpg 3x
+                      img/news/malbec/malbec@1x.jpg 1x,
+                      img/news/malbec/malbec@2x.jpg 2x,
+                      img/news/malbec/malbec@3x.jpg 3x
                     "
                   />
                   <img
-                    src="img/news/new-assortment/new-assortment@1x.jpg"
+                    src="img/news/malbec/malbec@1x.jpg"
                     alt="Gröna vindruvor"
                     loading="lazy"
                   />
                 </picture>
               </div>
               <div class="content">
-                <p class="date">2025-01-03</p>
-                <h3>Nu lanserar vi ett nytt sortiment</h3>
+                <p class="date">2024-12-21</p>
+                <h3>Rött vin från Frankrike av druvan Malbec</h3>
               </div>
             </article>
           </a>
@@ -414,63 +414,63 @@
                     type="image/avif"
                     media="(max-width: 480px)"
                     srcset="
-                      img/news/new-assortment/new-assortment-mobile@1x.avif 1x,
-                      img/news/new-assortment/new-assortment-mobile@2x.avif 2x,
-                      img/news/new-assortment/new-assortment-mobile@3x.avif 3x
+                      img/news/wine-tasting/wine-tasting-mobile@1x.avif 1x,
+                      img/news/wine-tasting/wine-tasting-mobile@2x.avif 2x,
+                      img/news/wine-tasting/wine-tasting-mobile@3x.avif 3x
                     "
                   />
                   <source
                     type="image/webp"
                     media="(max-width: 480px)"
                     srcset="
-                      img/news/new-assortment/new-assortment-mobile@1x.webp 1x,
-                      img/news/new-assortment/new-assortment-mobile@2x.webp 2x,
-                      img/news/new-assortment/new-assortment-mobile@3x.webp 3x
+                      img/news/wine-tasting/wine-tasting-mobile@1x.webp 1x,
+                      img/news/wine-tasting/wine-tasting-mobile@2x.webp 2x,
+                      img/news/wine-tasting/wine-tasting-mobile@3x.webp 3x
                     "
                   />
                   <source
                     type="image/jpg"
                     media="(max-width: 480px)"
                     srcset="
-                      img/news/new-assortment/new-assortment-mobile@1x.jpg 1x,
-                      img/news/new-assortment/new-assortment-mobile@2x.jpg 2x,
-                      img/news/new-assortment/new-assortment-mobile@3x.jpg 3x
+                      img/news/wine-tasting/wine-tasting-mobile@1x.jpg 1x,
+                      img/news/wine-tasting/wine-tasting-mobile@2x.jpg 2x,
+                      img/news/wine-tasting/wine-tasting-mobile@3x.jpg 3x
                     "
                   />
                   <source
                     type="image/avif"
                     srcset="
-                      img/news/new-assortment/new-assortment@1x.avif 1x,
-                      img/news/new-assortment/new-assortment@2x.avif 2x,
-                      img/news/new-assortment/new-assortment@3x.avif 3x
+                      img/news/wine-tasting/wine-tasting@1x.avif 1x,
+                      img/news/wine-tasting/wine-tasting@2x.avif 2x,
+                      img/news/wine-tasting/wine-tasting@3x.avif 3x
                     "
                   />
                   <source
                     type="image/webp"
                     srcset="
-                      img/news/new-assortment/new-assortment@1x.webp 1x,
-                      img/news/new-assortment/new-assortment@2x.webp 2x,
-                      img/news/new-assortment/new-assortment@3x.webp 3x
+                      img/news/wine-tasting/wine-tasting@1x.webp 1x,
+                      img/news/wine-tasting/wine-tasting@2x.webp 2x,
+                      img/news/wine-tasting/wine-tasting@3x.webp 3x
                     "
                   />
                   <source
                     type="image/jpg"
                     srcset="
-                      img/news/new-assortment/new-assortment@1x.jpg 1x,
-                      img/news/new-assortment/new-assortment@2x.jpg 2x,
-                      img/news/new-assortment/new-assortment@3x.jpg 3x
+                      img/news/wine-tasting/wine-tasting@1x.jpg 1x,
+                      img/news/wine-tasting/wine-tasting@2x.jpg 2x,
+                      img/news/wine-tasting/wine-tasting@3x.jpg 3x
                     "
                   />
                   <img
-                    src="img/news/new-assortment/new-assortment@1x.jpg"
+                    src="img/news/wine-tasting/wine-tasting@1x.jpg"
                     alt="Gröna vindruvor"
                     loading="lazy"
                   />
                 </picture>
               </div>
               <div class="content">
-                <p class="date">2025-01-03</p>
-                <h3>Nu lanserar vi ett nytt sortiment</h3>
+                <p class="date">2024-12-15</p>
+                <h3>Boka vårens vinprovningar</h3>
               </div>
             </article>
           </a>
