Updated img's alts and resize img's on mobile view

--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
                   />
                   <img
                     src="img/products/home-page/crazy-cat/crazy-cat-homepage@1x.png"
-                    alt="Vinflaskan Bardolino"
+                    alt="Vinflaskan Crazy Cat"
                     loading="lazy"
                   />
                 </picture>
@@ -253,7 +253,7 @@
                   />
                   <img
                     src="img/products/home-page/alba-rhino/alba-rhino-homepage@1x.png"
-                    alt="Vinflaskan Bardolino"
+                    alt="Vinflaskan Alba Rhino"
                     loading="lazy"
                   />
                 </picture>
