Fixed aria-labelledby not pointing to an elem

--- a/viner/produkter/bardolino.html
+++ b/viner/produkter/bardolino.html
@@ -104,8 +104,10 @@
         </picture>
       </div>
       <div class="gallery-and-about-container">
-        <section class="gallery" aria-labelledby="galleryheading">
-          <h2 class="visually-hidden">Bild- och videogalleri</h2>
+        <section class="gallery" aria-labelledby="gallery-heading">
+          <h2 id="gallery-heading" class="visually-hidden">
+            Bild- och videogalleri
+          </h2>
           <div class="display-area">
             <div class="img-wrapper gallery-item active">
               <picture>
