Updated page varukorg with new img's, txt, styling

--- a/varukorg/varukorg.html
+++ b/varukorg/varukorg.html
@@ -167,50 +167,50 @@
                 type="image/webp"
                 media="(max-width: 665px)"
                 srcset="
-                  ../img/products/shopping-cart-page/bardolino/bardolino-shopping-cart-page-mobile@1x.webp 1x,
-                  ../img/products/shopping-cart-page/bardolino/bardolino-shopping-cart-page-mobile@2x.webp 2x,
-                  ../img/products/shopping-cart-page/bardolino/bardolino-shopping-cart-page-mobile@3x.webp 3x
+                  ../img/products/shopping-cart-page/oddbird/oddbird-shopping-cart-page-mobile@1x.webp 1x,
+                  ../img/products/shopping-cart-page/oddbird/oddbird-shopping-cart-page-mobile@2x.webp 2x,
+                  ../img/products/shopping-cart-page/oddbird/oddbird-shopping-cart-page-mobile@3x.webp 3x
                 "
               />
               <source
                 type="image/png"
                 media="(max-width: 665px)"
                 srcset="
-                  ../img/products/shopping-cart-page/bardolino/bardolino-shopping-cart-page-mobile@1x.png 1x,
-                  ../img/products/shopping-cart-page/bardolino/bardolino-shopping-cart-page-mobile@2x.png 2x,
-                  ../img/products/shopping-cart-page/bardolino/bardolino-shopping-cart-page-mobile@3x.png 3x
+                  ../img/products/shopping-cart-page/oddbird/oddbird-shopping-cart-page-mobile@1x.png 1x,
+                  ../img/products/shopping-cart-page/oddbird/oddbird-shopping-cart-page-mobile@2x.png 2x,
+                  ../img/products/shopping-cart-page/oddbird/oddbird-shopping-cart-page-mobile@3x.png 3x
                 "
               />
               <source
                 type="image/webp"
                 srcset="
-                  ../img/products/shopping-cart-page/bardolino/bardolino-shopping-cart-page@1x.webp 1x,
-                  ../img/products/shopping-cart-page/bardolino/bardolino-shopping-cart-page@2x.webp 2x,
-                  ../img/products/shopping-cart-page/bardolino/bardolino-shopping-cart-page@3x.webp 3x
+                  ../img/products/shopping-cart-page/oddbird/oddbird-shopping-cart-page@1x.webp 1x,
+                  ../img/products/shopping-cart-page/oddbird/oddbird-shopping-cart-page@2x.webp 2x,
+                  ../img/products/shopping-cart-page/oddbird/oddbird-shopping-cart-page@3x.webp 3x
                 "
               />
               <source
                 type="image/png"
                 srcset="
-                  ../img/products/shopping-cart-page/bardolino/bardolino-shopping-cart-page@1x.png 1x,
-                  ../img/products/shopping-cart-page/bardolino/bardolino-shopping-cart-page@2x.png 2x,
-                  ../img/products/shopping-cart-page/bardolino/bardolino-shopping-cart-page@3x.png 3x
+                  ../img/products/shopping-cart-page/oddbird/oddbird-shopping-cart-page@1x.png 1x,
+                  ../img/products/shopping-cart-page/oddbird/oddbird-shopping-cart-page@2x.png 2x,
+                  ../img/products/shopping-cart-page/oddbird/oddbird-shopping-cart-page@3x.png 3x
                 "
               />
               <img
-                src="../img/products/shopping-cart-page/bardolino/bardolino-shopping-cart-page@1x.png"
-                alt="Vinflaskan Bardolino"
+                src="../img/products/shopping-cart-page/oddbird/oddbird-shopping-cart-page@1x.png"
+                alt="Vinflaskan Oddbird"
                 loading="lazy"
               />
             </picture>
-            <h3 class="product-name">La Corde del Pozzo - Bardolino, 2023</h3>
+            <h3 class="product-name">Oddbird Presence - Non Alcoholic</h3>
           </div>
-          <p class="quantity">5st</p>
-          <p class="price">15 000:-</p>
+          <p class="quantity">3st</p>
+          <p class="price">3300:-</p>
         </article>
         <div class="total">
-          <p class="total-quantity">Totalt (10 varor)</p>
-          <p class="total-price">30 000:-</p>
+          <p class="total-quantity">Totalt (8 varor)</p>
+          <p class="total-price">18 300:-</p>
         </div>
       </div>
       <section class="leverans">
