Reformatted how prices are shown

--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
               <p class="country">Italien</p>
               <h3 class="title">La Corde del Pozzo</h3>
               <p class="description">Bardolino</p>
-              <p class="price">3000:-</p>
+              <p class="price">3 000:-</p>
             </a>
           </article>
           <article>
@@ -210,7 +210,7 @@
               <p class="country">Australien</p>
               <h3 class="title">Crazy Cat</h3>
               <p class="description">Chardonnay</p>
-              <p class="price">1500:-</p>
+              <p class="price">1 500:-</p>
             </a>
           </article>
           <article>
@@ -261,7 +261,7 @@
               <p class="country">Portugal</p>
               <h3 class="title">Alba Rhino</h3>
               <p class="description">Vinho Verde</p>
-              <p class="price">4700:-</p>
+              <p class="price">4 700:-</p>
             </a>
           </article>
         </div>
