--- a/varukorg/varukorg.html
+++ b/varukorg/varukorg.html
@@ -206,7 +206,7 @@
             <h3 class="product-name">Oddbird Presence - Non Alcoholic</h3>
           </div>
           <p class="quantity">3st</p>
-          <p class="price">3300:-</p>
+          <p class="price">3 300:-</p>
         </article>
         <div class="total">
           <p class="total-quantity">Totalt (8 varor)</p>
