--- a/viner/produkter/alba-rhino.html
+++ b/viner/produkter/alba-rhino.html
@@ -197,7 +197,7 @@
             />
             <p class="country">Vinho Verde, Portugal</p>
           </div>
-          <p class="price">4700:-</p>
+          <p class="price">4 700:-</p>
           <p class="volume">750 ml · 13,5 % vol.</p>
           <p class="long-description">
             Fruktig, något aromatisk, mycket frisk smak med inslag av gula
