--- a/viner/produkter/bardolino.html
+++ b/viner/produkter/bardolino.html
@@ -197,7 +197,7 @@
             />
             <p class="country">Venetien, Italien</p>
           </div>
-          <p class="price">3000:-</p>
+          <p class="price">3 000:-</p>
           <p class="volume">750 ml · 12,5 % vol.</p>
           <p class="long-description">
             Bärig, ungdomlig smak med inslag av körsbär, färska örter, hallon
