--- a/viner/produkter/crazy-cat.html
+++ b/viner/produkter/crazy-cat.html
@@ -197,7 +197,7 @@
             />
             <p class="country">Australien</p>
           </div>
-          <p class="price">1500:-</p>
+          <p class="price">1 500:-</p>
           <p class="volume">1000 ml · 13 % vol.</p>
           <p class="long-description">
             Fruktig, ungdomlig smak med inslag av fat, päron, örter, persika,
