--- a/viner/produkter/lisa.html
+++ b/viner/produkter/lisa.html
@@ -196,7 +196,7 @@
             />
             <p class="country">Italien</p>
           </div>
-          <p class="price">2300:-</p>
+          <p class="price">2 300:-</p>
           <p class="volume">1000 ml · 13,5 % vol.</p>
           <p class="long-description">
             Fruktig smak med fatkaraktär, inslag av plommon, choklad, mörka
