--- a/viner/produkter/oddbird.html
+++ b/viner/produkter/oddbird.html
@@ -218,7 +218,7 @@
             />
             <p class="country">Frankrike</p>
           </div>
-          <p class="price">1100:-</p>
+          <p class="price">1 100:-</p>
           <p class="volume">750 ml · 0,5 % vol.</p>
           <p class="long-description">
             Fruktig, något blommig smak med liten sötma, inslag av äpplen,
