--- a/viner/viner.html
+++ b/viner/viner.html
@@ -205,7 +205,7 @@
                   />
                   <p class="country">Venetien, Italien</p>
                 </div>
-                <p class="price">3000:-</p>
+                <p class="price">3 000:-</p>
                 <p class="volume">750 ml · 12,5 % vol.</p>
               </a>
               <div class="in-stock-add-to-cart-button">
@@ -285,7 +285,7 @@
                   />
                   <p class="country">Australien</p>
                 </div>
-                <p class="price">1500:-</p>
+                <p class="price">1 500:-</p>
                 <p class="volume">1000 ml · 13 % vol.</p>
               </a>
               <div class="in-stock-add-to-cart-button">
@@ -365,7 +365,7 @@
                   />
                   <p class="country">Vinho Verde, Portugal</p>
                 </div>
-                <p class="price">4700:-</p>
+                <p class="price">4 700:-</p>
                 <p class="volume">750 ml · 13,5 % vol.</p>
               </a>
               <div class="in-stock-add-to-cart-button">
@@ -445,7 +445,7 @@
                   />
                   <p class="country">Frankrike</p>
                 </div>
-                <p class="price">1100:-</p>
+                <p class="price">1 100:-</p>
                 <p class="volume">750 ml · 0,5 % vol.</p>
               </a>
               <div class="in-stock-add-to-cart-button">
@@ -525,7 +525,7 @@
                   />
                   <p class="country">Italien</p>
                 </div>
-                <p class="price">2300:-</p>
+                <p class="price">2 300:-</p>
                 <p class="volume">1000 ml · 13,5 % vol.</p>
               </a>
               <div class="in-stock-add-to-cart-button">
