Update homepage with new links for the products

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
         <h2>Våra mest sålda drycker</h2>
         <div class="products">
           <article>
-            <a href="#">
+            <a href="viner/produkter/bardolino">
               <div class="product-img-wrapper">
                 <picture>
                   <source
@@ -163,7 +163,7 @@
             </a>
           </article>
           <article>
-            <a href="#">
+            <a href="viner/produkter/crazy-cat">
               <div class="product-img-wrapper">
                 <picture>
                   <source
@@ -214,7 +214,7 @@
             </a>
           </article>
           <article>
-            <a href="#">
+            <a href="viner/produkter/alba-rhino">
               <div class="product-img-wrapper">
                 <picture>
                   <source
