Improved the nav by removing .html from links and implemented an active link styling

--- a/varukorg/varukorg.html
+++ b/varukorg/varukorg.html
@@ -53,19 +53,19 @@
         <nav class="hideNavbarAnimation">
           <ul>
             <li>
-              <a class="link" href="../omVinbolaget/omvinbolaget.html"
+              <a class="link" href="../omVinbolaget/omvinbolaget"
                 >Om Vinbolaget</a
               >
             </li>
-            <li><a class="link" href="../viner/viner.html">Viner</a></li>
+            <li><a class="link" href="../viner/viner">Viner</a></li>
             <li>
-              <a class="link" href="../varukorg/varukorg.html">Varukorg</a>
+              <a class="active link" href="../varukorg/varukorg">Varukorg</a>
             </li>
             <li>
               <!-- Is shown only at max-width: 640px -->
               <form
                 class="inside-nav"
-                action="../viner/viner.html"
+                action="../viner/viner"
                 autocomplete="off"
               >
                 <input type="search" name="search" placeholder="Sök vin..." />
