--- a/viner/produkter/alba-rhino.html
+++ b/viner/produkter/alba-rhino.html
@@ -61,7 +61,9 @@
                 >Om Vinbolaget</a
               >
             </li>
-            <li><a class="link" href="../../viner/viner.html">Viner</a></li>
+            <li>
+              <a class="active link" href="../../viner/viner.html">Viner</a>
+            </li>
             <li>
               <a class="link" href="../../varukorg/varukorg.html">Varukorg</a>
             </li>
