Minor tweaking to links inside header

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
               <img src="img/logo/logo.svg" alt="Vinbolagets logga" />
             </picture>
           </a>
-          <form class="outside-nav" action="viner/viner" autocomplete="off">
+          <form class="outside-nav" action="viner/" autocomplete="off">
             <input type="search" name="search" placeholder="Sök vin..." />
           </form>
         </div>
@@ -53,13 +53,13 @@
         <nav class="hideNavbarAnimation">
           <ul>
             <li>
-              <a class="link" href="omVinbolaget/omvinbolaget">Om Vinbolaget</a>
+              <a class="link" href="om-vinbolaget">Om Vinbolaget</a>
             </li>
-            <li><a class="link" href="viner/viner">Viner</a></li>
-            <li><a class="link" href="varukorg/varukorg">Varukorg</a></li>
+            <li><a class="link" href="viner">Viner</a></li>
+            <li><a class="link" href="varukorg">Varukorg</a></li>
             <li>
               <!-- Is shown only at max-width: 640px -->
-              <form class="inside-nav" action="viner/viner" autocomplete="off">
+              <form class="inside-nav" action="viner/" autocomplete="off">
                 <input type="search" name="search" placeholder="Sök vin..." />
               </form>
             </li>
