Added alt to img + rewrote an alt

--- a/viner/produkter/lisa.html
+++ b/viner/produkter/lisa.html
@@ -145,6 +145,7 @@
                 <img
                   class="gallery-img"
                   src="../../img/products/product-page/lisa/lisa-product-page@1x.lisa/lisa"
+                  alt="Vinflaskan Lisa"
                   loading="lazy"
                 />
               </picture>
@@ -173,7 +174,7 @@
                   <img
                     class="product-img"
                     src="../../img/products/product-page/lisa/lisa-product-page-item@1x.png"
-                    alt="Vinflaskan Alba Rhino"
+                    alt="Vinflaskan Lisa"
                     loading="lazy"
                   />
                 </picture>
