Set explicit width and height to the video play button img in product Oddbird

--- a/viner/produkter/oddbird.html
+++ b/viner/produkter/oddbird.html
@@ -195,6 +195,7 @@
             <li>
               <button data-gallery-item="item-2">
                 <img
+                  class="product-video-img"
                   src="../../icon/iconmonstr-video.svg"
                   alt="ikon av en video knapp"
                 />
