--- a/varukorg/index.html
+++ b/varukorg/index.html
@@ -209,7 +209,7 @@
       </div>
       <section class="leverans">
         <h2>Leverans</h2>
-        <form action="POST">
+        <form id="delivery" action=".">
           <div class="input-box-container">
             <div class="input-box">
               <label for="name">Namn</label>
@@ -273,5 +273,6 @@
       </div>
     </footer>
     <script src="../js/header.js"></script>
+    <script src="../js/varukorg.js"></script>
   </body>
 </html>
